# audio-tray

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  release.toml
.github/workflows/: ci.yml  release.yml  winget.yml
packaging/: audio-tray.iss
packaging/winget/: MichelSalib.AudioTray.installer.yaml  MichelSalib.AudioTray.locale.en-US.yaml  MichelSalib.AudioTray.yaml
src/: config.rs  flyout.rs  main.rs  update.rs
src/audio/: battery.rs  mod.rs  notify.rs  switch.rs  wasapi.rs
src/flyout/: canvas.rs  layout.rs  mod.rs  model.rs  render.rs  theme.rs  window.rs
src/icons/: mod.rs
src/tray/: mod.rs
