[package]
name = "audio-tray"
version = "0.4.0"
edition = "2021"
description = "Windows system-tray app for viewing and switching the default audio output device"
license = "MIT"
readme = "README.md"
repository = "https://github.com/michelsalib/audio-tray"
homepage = "https://github.com/michelsalib/audio-tray"
authors = ["Michel Salib"]

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1"
# Undocumented IPolicyConfig binding for switching the default endpoint. Isolated
# behind audio/switch.rs (plan §9). Must share the same `windows` version as us.
com-policy-config = "0.6"
directories = "6.0.0"
# In-app GitHub-releases self-updater (see src/update.rs). Uses the `ureq` client
# with `native-tls` = Windows SChannel, so no tokio/reqwest, no ring/rustls, and
# no OpenSSL to build on the MSVC toolchain. archive-zip matches the zipped
# `audio-tray-x86_64-pc-windows-msvc.zip` release asset.
self_update = { version = "0.44", default-features = false, features = [
    "ureq",
    "default-tls",
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
tray-icon = "0.24.1"
windows-core = "0.61"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Registry",
    # MessageBeep (the volume "ding" on a slider change) lives here, not in UI.
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winresource = "0.1.31"
